src/objects/SF_182_Training__c.object
<CustomObject>
    <fields>
        <fullName>SF182_Training_Total__c</fullName>
        <label>SF182 Training Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_182__c</fullName>
        <inlineHelpText>SF 182 - Auto generated name of the corresponding SF 182 page; select this field&apos;s link to go back to the SF 182 page where general information about the employee is stored</inlineHelpText>
        <label>SF 182</label>
        <referenceTo>Form_SF_182__c</referenceTo>
        <relationshipLabel>SF 182 Request</relationshipLabel>
        <relationshipName>SF_182_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supervisor_Approver_Instructions__c</fullName>
        <defaultValue>&quot;Please review all the training request details listed below. It is important to note that the ‘Training Course Data’ and the  ‘Cost and Billing Information - Training Requester’ sections are properly completed before you approve this request.&quot;</defaultValue>
        <label>Supervisor/Approver Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Supervisor - Please refer to your organizational structure to determine your Supervisor</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SF_182_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Terms and Conditions - Accepted - This field is checked when you agree to the GSA Continuing Service Agreement terms and conditions</inlineHelpText>
        <label>Terms and Conditions - Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cumulative_Amount__c</fullName>
        <label>Total Cumulative Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Training_Duty_Hours__c  +  Training_Non_Duty_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Hours - The sum of Training Duty Hours + Training Non Duty Hours</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TF_and_BM__c</fullName>
        <formula>Tuition_and_Fee__c  +  Books_and_Materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total (TF and BM) - Tuition and Fee Costs  +  Books and Materials Costs</inlineHelpText>
        <label>Total (TF and BM) Direct Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_T_and_PD__c</fullName>
        <formula>Travel__c  +  Per_Diem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total (T and PD) - Travel Costs  +  Per Diem Costs</inlineHelpText>
        <label>Total (T and PD) Indirect Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Training Completed - Once you have completed this training please select this checkbox</inlineHelpText>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Credit_Type_Code__c</fullName>
        <inlineHelpText>Training Credit Type Code - Please select the value that applies to your requested training</inlineHelpText>
        <label>Training Credit Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Semester Hours</fullName>
                </value>
                <value>
                    <fullName>2-Quarter Hours</fullName>
                </value>
                <value>
                    <fullName>3-Continuing Education Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Credit__c</fullName>
        <inlineHelpText>Training Credit - Amount of academic credit hours of continued education units (1, 1.5, or .75) earned by the employee for the completed training</inlineHelpText>
        <label>Training Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Delivery_Type_Code__c</fullName>
        <inlineHelpText>Training Delivery Type Code - Please select the value that applies to your requested training</inlineHelpText>
        <label>Training Delivery Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Traditional Classroom (no technology)</fullName>
                </value>
                <value>
                    <fullName>2-On the Job</fullName>
                </value>
                <value>
                    <fullName>3-Technology Based</fullName>
                </value>
                <value>
                    <fullName>4-Conference/Workshop</fullName>
                </value>
                <value>
                    <fullName>5-Blended</fullName>
                </value>
                <value>
                    <fullName>6-Correspondence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Designation_Type_Code__c</fullName>
        <inlineHelpText>Training Designation Type Code - Please select the value that applies to your requested training</inlineHelpText>
        <label>Training Designation Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Undergraduate Credit</fullName>
                </value>
                <value>
                    <fullName>2-Graduate Credit</fullName>
                </value>
                <value>
                    <fullName>3-Continuing Education Unit</fullName>
                </value>
                <value>
                    <fullName>4-Post Graduate Credit</fullName>
                </value>
                <value>
                    <fullName>5-N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Duty_Hours__c</fullName>
        <inlineHelpText>Training Duty Hours - Please insert the number of duty hours for training. Example format: 80.</inlineHelpText>
        <label>Training Duty Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <inlineHelpText>Training End Date - Please enter the date in which your training course or class will end; please note that the system will notify you to mark your training as completed 5 days following the date entered within this field; Example format: MM/DD/YYYY</inlineHelpText>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Non_Duty_Hours__c</fullName>
        <inlineHelpText>Training Non Duty Hours - Please insert the number of non-duty hours for training. Example format: 40.</inlineHelpText>
        <label>Training Non Duty Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Purpose_Type__c</fullName>
        <inlineHelpText>Training Purpose Type - Please insert the purpose for taking this course or program using the appropriate training purpose type code</inlineHelpText>
        <label>Training Purpose Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Program/Mission</fullName>
                </value>
                <value>
                    <fullName>2-New Work Assignment</fullName>
                </value>
                <value>
                    <fullName>3-Improve/Maintain Present Performance</fullName>
                </value>
                <value>
                    <fullName>4-Future Staff Needs</fullName>
                </value>
                <value>
                    <fullName>5-Develop Unavailable Skills</fullName>
                </value>
                <value>
                    <fullName>6-Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Source_Type_Code__c</fullName>
        <inlineHelpText>Training Source Type Code - Please select the value that applies to your requested training</inlineHelpText>
        <label>Training Source Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Government Internal</fullName>
                </value>
                <value>
                    <fullName>2-Government External</fullName>
                </value>
                <value>
                    <fullName>3-Non-government</fullName>
                </value>
                <value>
                    <fullName>4-Government State/Local</fullName>
                </value>
                <value>
                    <fullName>5-Foreign Governments and Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <inlineHelpText>Training Start Date - Please enter the date in which your training course or class will begin; Example format: MM/DD/YYYY</inlineHelpText>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Sub_Type_Code__c</fullName>
        <inlineHelpText>Training Sub Type Code - This field&apos;s values are dependent on the value selected from the &quot;Training Type Code&quot; field; please select the value that applies to your requested training</inlineHelpText>
        <label>Training Sub Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Training_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Legal</fullName>
                </value>
                <value>
                    <fullName>2-Medical and Health</fullName>
                </value>
                <value>
                    <fullName>3-Scientific</fullName>
                </value>
                <value>
                    <fullName>4-Engineering or Architecture</fullName>
                </value>
                <value>
                    <fullName>5-Human Resources</fullName>
                </value>
                <value>
                    <fullName>6-Budget/Finance Business Administration</fullName>
                </value>
                <value>
                    <fullName>7-Planning and Analysis</fullName>
                </value>
                <value>
                    <fullName>8-Information Technology</fullName>
                </value>
                <value>
                    <fullName>9-Project Management</fullName>
                </value>
                <value>
                    <fullName>10-Acquisition</fullName>
                </value>
                <value>
                    <fullName>11-Logistic Specialty</fullName>
                </value>
                <value>
                    <fullName>12-Security</fullName>
                </value>
                <value>
                    <fullName>13-Clerical (Non-supervisory clerical/administrative)</fullName>
                </value>
                <value>
                    <fullName>14-Trade and Craft</fullName>
                </value>
                <value>
                    <fullName>15-Foreign Affairs</fullName>
                </value>
                <value>
                    <fullName>16-Leadership/Manager/Communications Courses</fullName>
                </value>
                <value>
                    <fullName>20-Presupervisory Program</fullName>
                </value>
                <value>
                    <fullName>21-Supervisory Program</fullName>
                </value>
                <value>
                    <fullName>22-Management Program</fullName>
                </value>
                <value>
                    <fullName>23-Leadership Development Program</fullName>
                </value>
                <value>
                    <fullName>24-SES Candidate Development</fullName>
                </value>
                <value>
                    <fullName>25-Executive Development</fullName>
                </value>
                <value>
                    <fullName>26-Mentoring Program</fullName>
                </value>
                <value>
                    <fullName>27-Coaching Program</fullName>
                </value>
                <value>
                    <fullName>30-Employee Orientation</fullName>
                </value>
                <value>
                    <fullName>31-Adult Basic Education</fullName>
                </value>
                <value>
                    <fullName>32-Federally Mandated Training</fullName>
                </value>
                <value>
                    <fullName>33-Work-life</fullName>
                </value>
                <value>
                    <fullName>34-Soft Skills</fullName>
                </value>
                <value>
                    <fullName>35-Agency Required Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Type_Code__c</fullName>
        <inlineHelpText>Training Type Code - Please select the value that applies to your requested training</inlineHelpText>
        <label>Training Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Training Program Area</fullName>
                </value>
                <value>
                    <fullName>2-Developmental Training Area</fullName>
                </value>
                <value>
                    <fullName>3-Basic Training Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Training Vendor Name - Please select the name of the vendor that will be providing the training (i.e. Strayer University); if they are not listed within the system please add them using the &apos;Contact Mgr&apos; application: https://gsa.my.salesforce.com/001/o</inlineHelpText>
        <label>Training Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SF 182 Request</relationshipLabel>
        <relationshipName>SF_182_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Vendor_Telephone_Number__c</fullName>
        <label>Training Vendor Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <inlineHelpText>Travel Cost - Please insert the actual/final travel cost excluding per diem for training completed by the employee that was paid for by the Federal Government. Example format: 200.</inlineHelpText>
        <label>Travel Cost (Indirect Cost)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_and_Fee__c</fullName>
        <inlineHelpText>Tuition and Fee - Please insert the actual/final cost of training tution &amp; fees for training completed by the employee that was paid for by the Federal Government. Example format: 1000.</inlineHelpText>
        <label>Tuition and Fee (Direct Cost)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor Contact - If there is a specific contact for the associated training vendor please add the contact within this field; if they are not listed within the system please add them using the &apos;Contact Mgr&apos; application https://gsa.my.salesforce.com/003/o</inlineHelpText>
        <label>(Optional) Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SF 182 Request</relationshipLabel>
        <relationshipName>SF_182_Trainings_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_Money_Obligated__c</fullName>
        <inlineHelpText>Was Money Obligated? - This field is only required if you select &quot;Cancel My Training&quot;; please indicate if any money was obligated for your requested training</inlineHelpText>
        <label>Was Money Obligated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SF 182 Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Requests</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <columns>Grand_Total_Training_Costs__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Training_Completed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Final Approval</value>
        </filters>
        <label>Approved Requests</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_Requests</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <columns>Grand_Total_Training_Costs__c</columns>
        <columns>Supervisor__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Final Approval,Cancelled Obligated,Cancelled Not Obligated</value>
        </filters>
        <label>In Progress Requests</label>
    </listViews>
    <listViews>
        <fullName>Requests_to_Approve</fullName>
        <columns>NAME</columns>
        <columns>Course_Title_if_Diff_from_Activity_Name__c</columns>
        <columns>Activity_Total_Cost__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pending_for_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Requests to Approve</label>
    </listViews>
    <listViews>
        <fullName>Shared_with_Me</fullName>
        <columns>NAME</columns>
        <columns>Course_Title_if_Diff_from_Activity_Name__c</columns>
        <columns>Activity_Total_Cost__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_the_request_shared_with_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Shared with Me</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Requests</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <columns>Grand_Total_Training_Costs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approval Process in Progress</value>
        </filters>
        <label>Submitted Requests</label>
    </listViews>
    <nameField>
        <displayFormat>SF-Training-{000000}</displayFormat>
        <label>SF 182 Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF 182 Request</pluralLabel>
    <recordTypes>
        <fullName>Purchasing_Training_Coordinator</fullName>
        <active>true</active>
        <description>This is Record Type useful for the Purchasing and Training coordinator to enter the details</description>
        <label>SF 182 Purchase Card Holder</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_182_Training_Completed</fullName>
        <active>true</active>
        <label>SF 182 Training Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>SF_182_Training_RecordType</fullName>
        <active>true</active>
        <label>SF 182 Training Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sf_182_Approver_RecordType</fullName>
        <active>true</active>
        <label>SF 182 Approval Process</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SF182_validation_to_check_the_resubmt</fullName>
        <active>false</active>
        <errorConditionFormula>IF( 
    OR(
        AND( ISPICKVAL( Final_Status__c ,&quot;In Process&quot;), Final_Approver__c = true, Resubmit_Approval_Process__c = true),AND(Final_Approver__c = true, Resubmit_Approval_Process__c = true,ISPICKVAL( Final_Status__c ,&quot;Final Approval&quot;))),false, true)</errorConditionFormula>
        <errorMessage>You cannot resubmit your request at this time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_Purchasing_Training_Coordinator</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

($User.Id) = ( SF_182__r.Owner:User.Id ),  (RecordType.DeveloperName = &quot;Purchasing Training Coordinator&quot;)

)</errorConditionFormula>
        <errorMessage>Your Suppose to do modification on this.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_Training_Completed_Rule</fullName>
        <active>true</active>
        <description>Only allow the Training Completed checkbox to be checked after the Training End date.</description>
        <errorConditionFormula>AND(Training_End_Date__c &gt; TODAY(),  Training_Completed__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Training_Completed__c</errorDisplayField>
        <errorMessage>You may only check the Training Completed field after the Training End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_Training_validation_for_pc</fullName>
        <active>true</active>
        <description>Validation for purchasing coordinator when the final approver is true.</description>
        <errorConditionFormula>OR(AND(Final_Approver__c = true, ISBLANK( Purchasing_Training_Coordinator__c ), ISBLANK(Text( Purchasing_Training_Coordinator_Group__c ) ) ) )</errorConditionFormula>
        <errorMessage>Please enter the Purchase Card Holder or Purchase Card Holder Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_Validation_on_Final_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ($User.Id  =  CreatedById), (Final_Approver__c = True),(   $RecordType.Name !=&quot;SF 182 Training Completed&quot;), NOT( Training_Completed__c))</errorConditionFormula>
        <errorMessage>As the creator of this request you do not have the permissions to edit this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_form_check_for_start_and_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>Training_End_Date__c &lt; Training_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Training_End_Date__c</errorDisplayField>
        <errorMessage>Training End Date should be later than Training Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SF_182_validation_for_Location</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

AND (ISPICKVAL( Location__c ,&apos;Off-site&apos;), If_Offsite_list_City__c= &quot;&quot;),

AND (ISPICKVAL( Location__c ,&apos;Off-site&apos;),ISPICKVAL( If_Offsite_list_State__c ,&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Off-site, list City and Off-site, list State fields are required when the Location is Off Site. Please complete these two fields before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sf_182_Training_is_money_refundable</fullName>
        <active>true</active>
        <description>When ever money Obligated &quot;Yes&quot;. They have to select the Money Refundable</description>
        <errorConditionFormula>IF( 

(
     AND ((ISPICKVAL(Was_Money_Obligated__c, &apos;yes&apos;)),(ISPICKVAL( Is_the_Money_Refundable__c , &quot;&quot;)))

),true,false)</errorConditionFormula>
        <errorDisplayField>Is_the_Money_Refundable__c</errorDisplayField>
        <errorMessage>Please select whether or not the money obligated is refundable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sf_182_Training_on_Deadline_for_request</fullName>
        <active>true</active>
        <description>When ever &quot; is money refundable&quot; Yes they have to select &quot;Deadline for requesting a refund Date&quot;</description>
        <errorConditionFormula>IF( 

(
   AND ((ISPICKVAL(Was_Money_Obligated__c, &apos;yes&apos;)),(ISPICKVAL( Is_the_Money_Refundable__c , &apos;yes&apos;)),
         ( ISNULL(Deadline_for_requesting_a_refund_Date__c))  || (Deadline_for_requesting_a_refund_Date__c  &lt;= TODAY())

)),true,false)</errorConditionFormula>
        <errorDisplayField>Deadline_for_requesting_a_refund_Date__c</errorDisplayField>
        <errorMessage>If the money is refundable, please enter the deadline date for requesting a refund. The deadline must be later than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sf_182_Training_validation_for_money_obl</fullName>
        <active>true</active>
        <description>If the Request Status is Cancel . They have to say was the money obligated.</description>
        <errorConditionFormula>IF( 

(
     AND ((ISPICKVAL(Was_Money_Obligated__c, &quot;&quot;)), Cancel_My_Training__c = true)

),true,false)</errorConditionFormula>
        <errorDisplayField>Was_Money_Obligated__c</errorDisplayField>
        <errorMessage>Please select if there was money already obligated for this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Not_to_enter_Approver</fullName>
        <active>false</active>
        <errorConditionFormula>IF( 
  AND (Supervisor__c != &quot;&quot;,Approver_1__c != &quot;&quot; ,Approver_2__c = &quot;&quot; ,Approver_3__c = &quot;&quot;,Approver_4__c =&quot;&quot;, ISPICKVAL(Final_Status__c ,&quot;Final Approval&quot;), Final_Approver__c =True),True,False)</errorConditionFormula>
        <errorMessage>You cannot select another Approver if you are the Final Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Terms_and_Conditions</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
     OR (
AND( ISPICKVAL( Request_Status__c , &quot;Initiating&quot;), Grand_Total_Training_Costs__c  &gt;= 3000, Terms_and_Conditions__c = False),
AND ( ISPICKVAL( Request_Status__c , &quot;Initiating&quot;),Training_Duty_Hours__c   &gt;= 80,Terms_and_Conditions__c = False)),True,False)</errorConditionFormula>
        <errorMessage>Please select the GSA Continuing Service Agreement button and accept the Continued Service Agreement if the cost of your request is 3000.00 or more or your Total Hours are greater 80 or more.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_the_Approves</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
    OR(
	 AND (Supervisor__c != &quot;&quot;,Approver_1__c = &quot;&quot; ,Approver_2__c = &quot;&quot; ,Approver_3__c = &quot;&quot;,Approver_4__c =&quot;&quot;,Final_Approver__c=False),
        AND (Supervisor__c != &quot;&quot; ,Approver_1__c  = &quot;&quot;,Final_Approver__c = True),
       AND (Supervisor__c != &quot;&quot; ,Approver_1__c != &quot;&quot;,Approver_2__c = &quot;&quot; ,Approver_3__c = &quot;&quot;,Approver_4__c =&quot;&quot;,Final_Approver__c =False),
      AND (Supervisor__c != &quot;&quot;,Approver_1__c != &quot;&quot; ,Approver_2__c  = &quot;&quot;,Final_Approver__c = True),
     AND (Supervisor__c != &quot;&quot; ,Approver_1__c != &quot;&quot;,Approver_2__c != &quot;&quot; ,Approver_3__c = &quot;&quot;,Approver_4__c =&quot;&quot;,Final_Approver__c =False),
    AND (Supervisor__c != &quot;&quot;,Approver_1__c != &quot;&quot; ,Approver_2__c != &quot;&quot; ,Approver_3__c  = &quot;&quot;,Final_Approver__c = True),
   AND (Supervisor__c != &quot;&quot; ,Approver_1__c != &quot;&quot;,Approver_2__c != &quot;&quot; ,Approver_3__c != &quot;&quot;,Approver_4__c =&quot;&quot;,Final_Approver__c =False),
  AND (Supervisor__c != &quot;&quot; ,Approver_1__c != &quot;&quot;,Approver_2__c != &quot;&quot; ,Approver_3__c != &quot;&quot;,Approver_4__c =&quot;&quot;,Final_Approver__c =True),
  AND (Supervisor__c != &quot;&quot;,Approver_1__c != &quot;&quot; ,Approver_2__c != &quot;&quot; ,Approver_3__c != &quot;&quot;,Approver_4__c !=&quot;&quot;,Final_Approver__c=False),
 AND (Supervisor__c != &quot;&quot;,Approver_1__c != &quot;&quot; ,Approver_2__c != &quot;&quot; ,Approver_3__c != &quot;&quot;,Approver_4__c !=&quot;&quot;,Final_Approver__c=True)),False,True)</errorConditionFormula>
        <errorMessage>You cannot skip an Approver. Please be sure to follow your organizational structure. For example, a Supervisor should select Approver 1 and Approver 1 should select Approver 2. A Supervisor should not select Approver 2 until Approver 1 has been chosen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_to_check_the_approver</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
AND(Supervisor__c  &lt;&gt; NUll, Final_Approver__c = True,  ISCHANGED( Approver_1__c )),True, False)</errorConditionFormula>
        <errorMessage>You cannot select the next Approver at this time.</errorMessage>
    </validationRules>
</CustomObject>